hphp/hack/test/typecheck/async_block4.php.exp
File "async_block4.php", line 5, characters 15-39:
Unexpected use of async {...} as lambda expression (Parsing[1002])
